--- a/ServerDocFabricator/appsettings.Development.json
+++ b/ServerDocFabricator/appsettings.Development.json
@@ -6,8 +6,10 @@
     }
   },
 
-  "AppSettings": {
-    "SecretKey": "supersicretkeyasfa",
-    "FilesPath": "D:\files"
+  "root": {
+    "settings": {
+      "SecretKey": "supersicretkeyasfa",
+      "FilesPath": "D:\\files"
+    }
   }
 }
