--- a/ServerDocFabricator/appsettings.json
+++ b/ServerDocFabricator/appsettings.json
@@ -6,9 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "AppSettings": {
-    "SecretKey": "supersicretkeyasfa",
-    "FilesPath": "D:\\files"
+  "root": {
+    "settings": {
+      "SecretKey": "supersicretkeyasfa",
+      "FilesPath": "D:\\files"
+    }
   }
 
 }
