--- a/ServerDocFabricator.BL/ServerDocFabricator.BL.csproj
+++ b/ServerDocFabricator.BL/ServerDocFabricator.BL.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="20.1.0.47" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1" />
   </ItemGroup>
