--- a/ServerDocFabricator/appsettings.json
+++ b/ServerDocFabricator/appsettings.json
@@ -9,7 +9,7 @@
   "root": {
     "settings": {
       "SecretKey": "supersicretkeyasfa",
-      "FilesPath": "D:\\files"
+      "Templates": "templates"
     }
   }
 
