--- a/ServerDocFabricator.BL/ServerDocFabricator.BL.csproj
+++ b/ServerDocFabricator.BL/ServerDocFabricator.BL.csproj
@@ -7,9 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspose.Words" Version="22.9.0" />
     <PackageReference Include="AutoMapper" Version="11.0.1" />
-    <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="20.1.0.47" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1" />
+    <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="20.2.0.49" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
   </ItemGroup>
 
   <ItemGroup>
