--- a/ServerDocFabricator/appsettings.Development.json
+++ b/ServerDocFabricator/appsettings.Development.json
@@ -8,7 +8,12 @@
 
   "root": {
     "settings": {
-      "SecretKey": "supersicretkeyasfa",
+      "SecretKey": "supersicretkeyasfa"
     }
+  },
+  
+  "Routes" : {
+    "Template" : "templates"
   }
+  
 }
