--- a/ServerDocFabricator/appsettings.json
+++ b/ServerDocFabricator/appsettings.json
@@ -11,6 +11,9 @@
       "SecretKey": "supersicretkeyasfa",
       "Templates": "templates"
     }
+  },
+  
+  "Routes" : {
+    "Template" : "templates"
   }
-
 }
