--- a/ServerDocFabricator.DAL/ServerDocFabricator.DAL.csproj
+++ b/ServerDocFabricator.DAL/ServerDocFabricator.DAL.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
-    <PackageReference Include="Syncfusion.XlsIO.Net.Core" Version="20.1.0.56" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-rc.1.22426.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0-rc.1.22426.7" />
+    <PackageReference Include="Syncfusion.XlsIO.Net.Core" Version="20.2.0.49" />
   </ItemGroup>
 
 </Project>
